# EPEXOrderLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/modules/: gtest.cmake
data/: example.csv
lib/: csv.cpp
src/: CMakeLists.txt  epexLib.hpp  epexLibConfig.cmake.in  main.cpp
src/epexlib/backtesting/: backtesting.cpp  backtesting.hpp  basicStrat.cpp  basicStrat.hpp  strategy.hpp
src/epexlib/marketsim/: marketsim.hpp
src/epexlib/models/: dynamicOrderBook.cpp  dynamicOrderBook.hpp  eventData.cpp  eventData.hpp  eventDataRow.cpp  eventDataRow.hpp
src/epexlib/orderbook/: orderbook.cpp  orderbook.hpp
src/epexlib/utils/: csv.cpp  csv.hpp  utils.hpp
src/models/: eventData.cpp  eventData.hpp  eventDataRow.cpp  eventDataRow.hpp
src/orderbook/: orderbook.cpp  orderbook.hpp
src/utils/: csv.cpp  csv.hpp  utils.hpp
tests/: CMakeLists.txt  test.cpp
